--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -7,6 +7,7 @@ dataSources:
     network: matic
     source:
       address: "0x45eBc3eAE6DA485097054ae10BA1A0f8e8c7f794"
+      startBlock: 25426566
       abi: EscrowFactory
     mapping:
       kind: ethereum/events
