--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "human-moonbase",
+  "name": "hmtmoonbeam",
   "license": "UNLICENSED",
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ menezesphill/human-moonbase",
-    "create-local": "graph create --node http://localhost:8020/ menezesphill/human-moonbase",
-    "remove-local": "graph remove --node http://localhost:8020/ menezesphill/human-moonbase",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 menezesphill/human-moonbase"
+    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ menezesphill/hmtmoonbeam",
+    "create-local": "graph create --node http://localhost:8020/ menezesphill/hmtmoonbeam",
+    "remove-local": "graph remove --node http://localhost:8020/ menezesphill/hmtmoonbeam",
+    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 menezesphill/hmtmoonbeam"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.30.3",
