--- a/package.json
+++ b/package.json
@@ -3,15 +3,10 @@
   "license": "UNLICENSED",
   "scripts": {
     "codegen": "graph codegen",
-    "build": "graph build",
-    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ menezesphill/hmtmoonbeam",
-    "create-local": "graph create --node http://localhost:8020/ menezesphill/hmtmoonbeam",
-    "remove-local": "graph remove --node http://localhost:8020/ menezesphill/hmtmoonbeam",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 menezesphill/hmtmoonbeam"
+    "build": "graph build"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.29.2",
-    "@graphprotocol/graph-ts": "0.26.0",
-    "gluegun": "^5.1.2"
+    "@graphprotocol/graph-ts": "0.26.0"
   }
 }
